# work-copilot

./: .env.example  .gitignore  README.md  agent_runtime.py  agent_types.py  approval.py  cli.py  console_ui.py  constants.py  draft_exports.py  interactive_cli.py  interactive_commands.py  interactive_session.py  main.py  permissions.py  previews.py  prompts.py  pyproject.toml  run_logging.py  runtime_events.py  servicedesk_draft_note_validation.py  servicedesk_triage.md  servicedesk_workflow_state.py  terminal_approval.py  terminal_event_sink.py  test_get_file_content.py  test_get_files_info.py  textual_app.py  textual_approval.py  textual_approval_screen.py  textual_diff_renderer.py  textual_diff_view.py  textual_event_sink.py  textual_preview.py  tool_categories.py  tool_dispatch.py  tool_registry.py
connectors/: base.py
docs/: active_directory_inspector_client.md  active_directory_real_inspector_smoke.md  architecture.md  exchange_mailbox_inspector_client.md  exchange_real_inspector_smoke.md  inspectors.md
executors/: __init__.py  models.py  registry.py
functions/: call_function.py  find_file.py  get_file_content.py  get_files_info.py  git_diff.py  git_diff_file.py  git_status.py  run_python_file.py  run_shell_command.py  run_tests.py  search_in_files.py  update_file.py  write_file.py
inspectors/: __init__.py  active_directory_command_runner.py  active_directory_config.py  active_directory_group.py  active_directory_group_membership.py  active_directory_powershell.py  active_directory_powershell_runner.py  active_directory_powershell_script.py  active_directory_user.py  exchange_auth_config.py  exchange_command_runner.py  exchange_config.py  exchange_mailbox.py  exchange_online_powershell.py  exchange_powershell_runner.py  exchange_powershell_script.py  factory.py  inspection_report.py  mock.py  models.py  registry.py  runner.py  skill_plan.py  storage.py
providers/: base.py  factory.py  gemini.py  openai.py
servicedesk_prompts/: __init__.py  common.py  context_prompt.py  labels.py  note_prompt.py  reply_prompt.py  skill_plan_prompt.py
servicedesk_skill_plan/: __init__.py  models.py  parser.py  persistence.py  validation.py
skills/: loader.py
tests/: test_agent_runtime.py  test_agent_types.py  test_approval.py  test_call_function.py  test_call_function_approval.py  test_cli.py  test_console_ui.py  test_draft_exports.py  test_find_file.py  test_get_file_content.py  test_get_files_info.py  test_git_diff.py  test_git_diff_file.py  test_git_status.py  test_hello_world.py  test_interactive_cli.py  test_interactive_commands.py  test_interactive_session.py  test_openai_provider.py  test_permissions.py  test_previews.py  test_provider_factory.py  test_run_logging.py  test_run_python_file.py  test_run_shell_command.py  test_runtime_events.py  (+23 more)
(+44 files in other folders)
