[project]
name = "work-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai==1.12.1",
    "openai>=2.32.0",
    "python-dotenv==1.1.0",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "textual>=8.2.4",
]

[project.scripts]
work-copilot = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "agent_runtime",
    "agent_types",
    "approval",
    "cli",
    "console_ui",
    "constants",
    "draft_exports",
    "interactive_cli",
    "interactive_commands",
    "interactive_session",
    "main",
    "permissions",
    "previews",
    "prompts",
    "run_logging",
    "runtime_events",
    "terminal_approval",
    "terminal_event_sink",
    "textual_app",
    "textual_approval",
    "textual_approval_screen",
    "textual_diff_renderer",
    "textual_diff_view",
    "textual_event_sink",
    "textual_preview",
    "tool_categories",
    "tool_dispatch",
    "tool_registry",
]

[tool.setuptools.packages.find]
include = [
    "functions",
    "functions.*",
    "providers",
    "providers.*",
    "calculator",
    "calculator.*",
    "connectors",
    "connectors*",
    "skills",
    "skills*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
